fix img align

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -140,28 +140,24 @@ $tab-height: 2.5em;
 }
 
 .hobby {
-  // border: $border1;
+  border: $border1;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
 
-  width: 10 rem;
-  height: 15 rem;
-
   &__item {
     display: flex;
-    // flex-basis: 40%;
     flex-direction: column;
     justify-content: center;
     border-radius: 15px;
     background-color: #fdf3e5;
     margin: 1em auto;
-    padding: 1em 2em;
+    padding: 1em 1em;
   }
 
   &__img {
-    margin: auto;
+    margin: 1em auto auto auto;
   }
 
   &__desc {
@@ -172,7 +168,7 @@ $tab-height: 2.5em;
 }
 
 .slide {
-  margin: auto;
+  margin: 1em auto auto auto;
 
   &__img {
     width: 20em;
